versions/v0.0.1/_sources/autoapi/autointent/modules/scoring/RerankScorer.rst.txt
autointent.modules.scoring.RerankScorer
=======================================

.. py:class:: autointent.modules.scoring.RerankScorer(k = 5, weights = 'distance', use_cross_encoder_scores = False, m = None, cross_encoder_config = None, embedder_config = None, vector_index_config = None)

   Bases: :py:obj:`autointent.modules.scoring._knn.knn.KNNScorer`


   Re-ranking scorer using a cross-encoder for intent classification.

   This module uses a cross-encoder to re-rank the nearest neighbors retrieved by a KNN scorer.

   :param embedder_config: Config of the embedder used for vectorization
   :param k: Number of closest neighbors to consider during inference
   :param weights: Weighting strategy:

                   - "uniform": Equal weight for all neighbors
                   - "distance": Weight inversely proportional to distance
                   - "closest": Only the closest neighbor of each class is weighted
   :param cross_encoder_config: Config of the cross-encoder model used for re-ranking
   :param m: Number of top-ranked neighbors to consider, or None to use k


   .. py:attribute:: name
      :value: 'rerank'



   .. py:attribute:: cross_encoder_config


   .. py:attribute:: vector_index_config


   .. py:attribute:: m
      :value: 5



   .. py:attribute:: use_cross_encoder_scores
      :value: False



   .. py:method:: from_context(context, k = 5, weights = 'distance', m = None, cross_encoder_config = None, embedder_config = None, use_cross_encoder_scores = False)
      :classmethod:


      Create a RerankScorer instance from a given context.

      :param context: Context object containing optimization information and vector index client
      :param k: Number of closest neighbors to consider during inference
      :param weights: Weighting strategy
      :param cross_encoder_config: Config of the cross-encoder model used for re-ranking
      :param embedder_config: Config of the embedder used for vectorization,
                              or None to use the best existing embedder
      :param m: Number of top-ranked neighbors to consider, or None to use k
      :param use_cross_encoder_scores: use crosencoder scores for the output probability vector computation



   .. py:method:: get_implicit_initialization_params()


   .. py:method:: fit(utterances, labels)

      Fit the RerankScorer with utterances and labels.

      :param utterances: List of utterances to fit the scorer
      :param labels: List of labels corresponding to the utterances



   .. py:method:: clear_cache()

      Clear cached data in memory used by the scorer and vector index.


