versions/v0.1.0/_sources/autoapi/autointent/modules/scoring/RerankScorer.rst.txt
autointent.modules.scoring.RerankScorer
=======================================

.. py:class:: autointent.modules.scoring.RerankScorer(k, weights, m = None, rank_threshold_cutoff = None, cross_encoder_config = None, embedder_config = None)

   Bases: :py:obj:`autointent.modules.scoring._knn.knn.KNNScorer`


   Re-ranking scorer using a cross-encoder for intent classification.

   This module uses a cross-encoder to re-rank the nearest neighbors retrieved by a KNN scorer.

   :param embedder_config: Config of the embedder used for vectorization
   :param k: Number of closest neighbors to consider during inference
   :param weights: Weighting strategy:

                   - "uniform": Equal weight for all neighbors
                   - "distance": Weight inversely proportional to distance
                   - "closest": Only the closest neighbor of each class is weighted
   :param cross_encoder_config: Config of the cross-encoder model used for re-ranking
   :param m: Number of top-ranked neighbors to consider, or None to use k
   :param rank_threshold_cutoff: Rank threshold cutoff for re-ranking, or None


   .. py:attribute:: name
      :value: 'rerank'


      Name of the module.


   .. py:attribute:: cross_encoder_config


   .. py:attribute:: m


   .. py:attribute:: rank_threshold_cutoff
      :value: None



   .. py:method:: from_context(context, k, weights = 'distance', m = None, cross_encoder_config = None, embedder_config = None, rank_threshold_cutoff = None)
      :classmethod:


      Create a RerankScorer instance from a given context.

      :param context: Context object containing optimization information and vector index client
      :param k: Number of closest neighbors to consider during inference
      :param weights: Weighting strategy
      :param cross_encoder_config: Config of the cross-encoder model used for re-ranking
      :param embedder_config: Config of the embedder used for vectorization,
                              or None to use the best existing embedder
      :param m: Number of top-ranked neighbors to consider, or None to use k
      :param rank_threshold_cutoff: Rank threshold cutoff for re-ranking, or None



   .. py:method:: fit(utterances, labels)

      Fit the RerankScorer with utterances and labels.

      :param utterances: List of utterances to fit the scorer
      :param labels: List of labels corresponding to the utterances



   .. py:method:: clear_cache()

      Clear cached data in memory used by the scorer and vector index.


